2007-08-08  Sven Neumann  <sven@gimp.org>

	* tools/widgets.c: include number-pair-entry instead of ratio-entry.

	* libgimpwidgets/images/gimp-ratio-entry.png
	* libgimpwidgets/images/gimp-number-pair-entry.png: replaced
	screenshots.

	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/libgimpwidgets.types
	* libgimpwidgets/libgimpwidgets-docs.sgml
	* libgimpwidgets/tmpl/gimpnumberpairentry.sgml
	* libgimpwidgets/tmpl/gimpratioentry.sgml: adopt to change from
	GimpRatioEntry to GimpNumberPairEntry.

2007-08-08  Sven Neumann  <sven@gimp.org>

	* app/app-sections.txt
	* app/app-docs.sgml: adjust to renamed files in app/paint-funcs.

2007-07-27  Raphaël Quinet  <raphael@gimp.org>

	* parasites.txt: document some of the parasites that have been
	added in the last two years: gimp-metadata, jpeg-save-defaults,
	jpeg-original-settings.

2007-07-25  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpprogress.sgml: updated for gimp_progress_end().

2007-07-20  Sven Neumann  <sven@gimp.org>

	* app/app-sections.txt
	* app/app.types
	* app/app-docs.sgml: minor updates.

2007-06-21  Sven Neumann  <sven@gimp.org>

	* app/app-sections.txt
	* app/app-docs.sgml: added TilePyramid docs.

2007-06-06  Sven Neumann  <sven@gimp.org>

	* libgimpcolor/libgimpcolor-sections.txt
	* libgimpcolor/libgimpcolor-docs.sgml: added documentation for the
	GimpColorManaged interface.

	* libgimpcolor/tmpl/gimpcolormanaged.sgml: new file.

2007-05-29  Sven Neumann  <sven@gimp.org>

	* app/app-sections.txt
	* app/app-docs.sgml: minor updates.

2007-05-21  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am: do nothing unless configured with
	--enable-gtk-doc-app. Removed dist-hook override.

2007-05-14  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am: ignore gimpdbusservice-glue.h.

	* app/app-sections.txt: some more updates.

2007-05-13  Sven Neumann  <sven@gimp.org>

	* libgimpbase/libgimpbase-sections.txt: added gimp_user_directory().
