@@ -492,8 +492,13 @@ GimpNumberPairEntry
 GimpAspectType
 gimp_number_pair_entry_new
 gimp_number_pair_entry_set_default_values
+gimp_number_pair_entry_get_default_values
 gimp_number_pair_entry_set_values
 gimp_number_pair_entry_get_values
+gimp_number_pair_entry_get_aspect
+gimp_number_pair_entry_set_aspect
+gimp_number_pair_entry_get_ratio
+gimp_number_pair_entry_set_ratio
 <SUBSECTION Standard>
 GIMP_NUMBER_PAIR_ENTRY
 GIMP_IS_NUMBER_PAIR_ENTRY
